# cpt

./: .gitignore  Cargo.toml  README.md  build.rs  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  validate_everything  vite.config.js
data/: mines.json  sample-battle.json
src/: action.rs  actor.rs  battle.rs  battle_deserialize.rs  battle_file.rs  battle_history.rs  battle_menu.rs  board.rs  card.rs  character.rs  dumb_actor.rs  grid.rs  lib.rs  main.rs  menu.rs  random_provider.rs  template.rs  terminal_actor.rs  terminal_ui.rs  wrapped_type.rs
src/web_actor/: handlers.rs  mod.rs  server.rs  web_actor.rs
src/web_actor/static/: App.tsx  BattleHistory.tsx  Card.tsx  Character.tsx  GameBoard.tsx  StoryCard.tsx  battle.ts  index.html  main.css  messages.ts  state.ts  utils.ts
