[package]
name = "cpd"
description = "Convoluted Pipe Dream"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
async-trait = "0.1.77"
futures = "0.3.30"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3.2"
termion = "3.0.0"
tokio = "1.38.0"
unicode-width = "0.1.12"

[features]
terminal_ui = []
